--- a/ct_gen/data/css/CT-img.css
+++ b/ct_gen/data/css/CT-img.css
@@ -3,7 +3,7 @@
 /* Body */
 body {
   font-family: 'Nunito Sans', sans-serif;
-  font-size: 16px;
+  font-size: 28px;
   line-height: 1.6;
   color: #333333;
 }
@@ -21,4 +21,10 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+p{
+  font-size: 21px; /* Same as body font size */
+  line-height: 1.6;
+  text-align: justify; /* Justify text in paragraphs */
 }
